add meta shite for discord

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>maru's homepage</title>
     <link rel="stylesheet" href="https://fonts.xz.style/serve/inter.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@exampledev/new.css@1.1.2/new.min.css">
+    <meta content="maru's homepage" property="og:title" />
+    <meta content="ey! my name is Maru, and I like computers." property="og:description" />
+    <meta content="https://maru.olcese.com.ar" property="og:url" />
+    <meta content="maruloop.gif" property="og:image" />
+    <meta content="#E15A97" data-react-helmet="true" name="theme-color" />
     <style>
         :root {
             --nc-tx-1: #ffffff;
