--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta content="maru's homepage" property="og:title" />
     <meta content="ey! my name is Maru, and I like computers." property="og:description" />
     <meta content="https://maru.olcese.com.ar" property="og:url" />
-    <meta content="maruloop.gif" property="og:image" />
+    <meta content="https://maru.olcese.com.ar/maruloop.gif" property="og:image" />
     <meta content="#E15A97" data-react-helmet="true" name="theme-color" />
     <style>
         :root {
