add mastodon link

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
     <br>
 
-    <a href="https://steamcommunity.com/id/heyitsmaru"><button>steam</button></a> - <a href="https://discord.com/users/969039246629437521"><button>discord</button></a> - <a href="https://github.com/unclamped"><button>github</button></a>
+    <a href="https://steamcommunity.com/id/heyitsmaru"><button>steam</button></a> - <a href="https://discord.com/users/969039246629437521"><button>discord</button></a> - <a href="https://github.com/unclamped"><button>github</button></a> - <a rel="me" href="https://rebel.ar/@maru">mastodon</a>
 
     <br>
     <hr>
