--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <p>ey! my name is Maru, and I {love, hate} computers.</p>
     <p>for now, this is all there is to this "site". I don't know if I will ever have enough discipline or motivation to write a proper Neocities-like thingy with fancy animations and buttons and whatnot, but the mere fact of having <em>something</em> under this domain is already calming enough.</p>
     <p>please harass me into continuing with this when summer vacations come around, or don't, that is assuming I haven't yet incinerated my computer.</p>
-    <p>oh yeah, and I'm currently reading <span class="house">House</span> of Leaves... yep, that's the only reason why I felt the need to say that, so I could make this stupid joke. I have a bit of brain damage from believing I was Superman when I was a child and jumping off the stairs in my <span class="house">home</span>.</p>
+    <p>oh yeah, and I'm currently reading <span class="house">House</span> of Leaves... yep, that's the only reason why I felt the need to say that, so I could make this stupid joke. I have a bit of brain damage from believing I was Superman when I was a child and jumping off the stairs in my home.</p>
 
     <br>
 
