--- a/es.html
+++ b/es.html
@@ -108,6 +108,7 @@
         <a href="https://github.com/unclamped"><button>github</button></a>
         <a rel="me" href="https://rebel.ar/@maru"><button>mastodon</button></a>
         <a href="https://instagram.com/maru.i.guess"><button>instagram</button></a>
+        <a href="https://www.last.fm/user/heyitsmaruuu"><button>last.fm</button></a>
         <a href="https://undertracker.com.ar"><button style="background-color: #000; color: #fff;">👁️</button></a>
     </div>
 
@@ -120,7 +121,7 @@
 
     <!-- https://web.archive.org/web/20240603224459/https://unsplash.com/photos/pink-and-white-flowers-near-body-of-water-during-daytime-GQPCerY1IG8 -->
     <a href="https://unsplash.com/photos/pink-and-white-flowers-near-body-of-water-during-daytime-GQPCerY1IG8">
-        <img src="https://images.unsplash.com/photo-1623594845764-13991ac51774" alt="pink and white flowers near body of water during daytime">
+        <img loading="lazy" src="https://images.unsplash.com/photo-1623594845764-13991ac51774" alt="pink and white flowers near body of water during daytime">
     </a>
     <p><a href="https://unsplash.com/@mcks"><em class="en">photo by Max Komthongvijit</em><em class="es">foto por Max Komthongvijit</em></a></p>
 
