refactor: hsoue of leaves

--- a/es.html
+++ b/es.html
@@ -95,12 +95,14 @@
     <p class="en">please harass me into continuing with this when summer vacations come around, or don't, that is assuming I haven't yet incinerated my computer.</p>
     <p class="en">fun fact, I LOVE the underground scene in my city, Córdoba, and I'm currently making a website dedicated to it, called "undertracker"! I can't tell you how to access it, but I'll give you a hint: if you start going to shows in Córdoba, maybe, just maybe, if I'm at the same show as you, there's a chance there might be an invitation or two floating around... good luck ;)</p>
     <p class="en">oh yeah, and I'm currently reading <span class="house">House</span> of Leaves... yep, that's the only reason why I felt the need to say that, so I could make this stupid joke. I have a bit of brain damage from believing I was Superman when I was a child and jumping off the stairs in my home.</p>
+    <p class="en">update 26/11/2025: while I was in the ward, I finally finished <span class="house">House</span> of Leaves! quite a great book honestly, now I'm reading 1984, One Hundred Years of Solitude, and eventually I might read "S."</p>
 
     <p class="es">buenas! me llamo Maru, y {amo, odio} las computadoras.</p>
     <p class="es">por ahora, esto es todo lo que hay en este "sitio". No sé si alguna vez tendré suficiente disciplina o motivación para escribir algo adecuado al estilo Neocities con animaciones y botones elegantes, pero el simple hecho de tener <em>algo</em> bajo este dominio ya me es sufi.</p>
     <p class="es">por favor molestame para que continúe con esto cuando lleguen las vacaciones de verano, o no, eso asumiendo que aún no haya incinerado mi computadora.</p>
     <p class="es">dato de color, AMO la escena underground de mi ciudad, Córdoba, y actualmente estoy haciendo un sitio web dedicada a ella, llamado "undertracker"! no puedo decirte como podés entrar, pero te tiro una pista, si empezás a ir a los recitales cordobeses, capaz, solo capaz, si estoy en el mismo recital que vos, existe la chance de que haya una que otra invitación dando vueltas... buena suerte ;)</p>
-    <p class="es">ah sí, y actualmente estoy leyendo <span class="house">House</span> of Leaves... sí, esa es la única razón por la que sentí la necesidad de decir eso, para poder hacer este estúpido chiste. Tengo un poco de daño cerebral por creer que era Superman cuando era niño y saltar desde las escaleras de mi casa.</p>
+    <p class="es"><s>ah, sí, y actualmente estoy leyendo La <span class="house">Casa</span> de Hojas... sí, esa es la única razón por la que sentí la necesidad de decir eso, para poder hacer este estúpido chiste. Tengo un poco de daño cerebral por creer que era Superman cuando era niño y saltar desde las escaleras de mi casa.</s></p>
+    <p class="es">actualización 26/11/2025: mientras estaba en el psiquiátrico, finalmente terminé La <span class="house">Casa</span> de Hojas! hermoso libro honestamente, ahora estoy leyendo 1984, Cien Años de Soledad, y eventualmente voy a leer "El Barco de Teseo".</p>
 
     <div class="social-buttons">
         <a href="https://steamcommunity.com/id/heyitsmaru"><button>steam</button></a>
